<resources>
    <string name="appName">Lifestyle App</string>
    <string name="enterFN">Enter First:</string>
    <string name="firstName">First Name</string>
    <string name="enterLN">Enter Last:</string>
    <string name="lastName">Last Name</string>
    <string name="enter">Enter</string>
    <string name="enterAge">Age</string>
    <string name="Age">Age in years</string>
    <string name="enterSex">Sex</string>
    <string name="enterCity">City</string>
    <string name="enterCountry">Country</string>
    <string name="enterHeight">Height (In)</string>
    <string name="enterWeight">Weight (lb)</string>
    <string name="uploadIcon">Upload Icon</string>
    <string name="upload">Upload</string>
    <string name="submit">Submit</string>
    <string name="entryText2">Please take a profile picture.</string>
    <string name="fullName">Your Full Name:</string>
    <string name="healthLevel">Health Level</string>
    <string name="activityLevel">Activity Level</string>
    <string name="actualGoal">Weight Goal</string>
    <string name="profilePic">Profile Picture:</string>
    <string name="age">Your Age:</string>
    <string name="welcomeHeader">Hello! Welcome to the Lifestyle App.</string>
    <string name="bmiTopLine">Your BMI</string>
    <string name="weatherHeader">WEATHER</string>
    <string name="weatherText">Your Location:</string>
    <string name="weatherLocation">City, Country</string>
    <string name="hikesHeader">Find hikes in your current area by clicking search below.</string>
    <string name="hikesButton">Search</string>
    <string name="bmiInfo">Body Mass Index (BMI) is a person’s weight in kilograms divided by the square of height in meters. A high BMI can be an indicator of high body fatness. BMI can be used to screen for weight categories that may lead to health problems but it is not diagnostic of the body fatness or health of an individual.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
