<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/firstName"
        />
    <TextView
        android:id="@+id/et_firstName_hardcoded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/et_firstName"
        android:layout_alignBaseline="@id/et_firstName"
        android:text="@string/enterFN"
        />
    <EditText
        android:id="@+id/et_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_firstName"
        android:layout_centerHorizontal="true"
        android:hint="@string/lastName"
        />
    <TextView
        android:id="@+id/et_lastName_hardcoded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/et_lastName"
        android:layout_below="@id/et_firstName"
        android:layout_alignBaseline="@id/et_lastName"
        android:text="@string/enterLN"
        />
    <EditText
        android:id="@+id/et_Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_lastName"
        android:layout_centerHorizontal="true"
        android:hint="@string/Age"
        />
    <TextView
        android:id="@+id/et_Age_hardcoded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/et_Age"
        android:layout_below="@id/et_lastName"
        android:layout_alignBaseline="@id/et_Age"
        android:text="@string/enterAge"
        />

    <TextView
        android:id="@+id/tv_enterPicture"
        android:layout_below="@id/et_Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/entryText2"
        />

    <Button
        android:id="@+id/button_takePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_enterPicture"
        android:layout_marginTop="2dp"
        android:text="@string/takeAPic"
        />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/button_takePicture"
        android:text="@string/submit"
        />
    <ImageView
        android:id="@+id/iv_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_submit"
        />

</RelativeLayout>